# smallstack-runbook

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_cowork/: install-runbook.md
smallstack_runbook/: __init__.py  admin.py  apps.py  conf.py  context_processors.py  explorer.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
smallstack_runbook/content/: getting-started.md  markdown-editor.md  search.md  slide-view.md  step-view.md  versioning.md
smallstack_runbook/management/commands/: reindex_documents.py  seed_runbook.py
smallstack_runbook/migrations/: 0001_initial.py
smallstack_runbook/static/runbook/: runbook.css  runbook.js
smallstack_runbook/templates/runbook/: base.html  dashboard.html  document_detail.html  document_edit_content.html  document_form.html  document_list.html  document_slides.html  document_steps.html  document_versions.html  new_version_form.html  runbook_detail.html  runbook_form.html  search.html  section_form.html
smallstack_runbook/templates/runbook/includes/: download_modal.html  search_results.html  stat_modal.html
smallstack_runbook/templatetags/: runbook_tags.py
smallstack_runbook/tests/: test_models.py  test_utils.py  test_views.py
